@@ -1,6 +1,7 @@
 import sys
 import threading
 
+from zope.deprecation import deprecated
 from zope.interface import implements
 
 try:
@@ -65,6 +66,11 @@ def get_renderer(path):
     factory = renderers.RendererHelper(name=path, package=package)
     return factory.get_renderer()
 
+deprecated(
+    'get_renderer',
+    '(pyramid.chameleon_zpt.get_renderer is deprecated '
+    'as of Pyramid 1.0; instead use pyramid.renderers.get_renderer)')
+
 def get_template(path):
     """ Return the underyling object representing a :term:`Chameleon`
     ZPT template using the template implied by the ``path`` argument.
@@ -78,6 +84,12 @@ def get_template(path):
     package = caller_package()
     factory = renderers.RendererHelper(name=path, package=package)
     return factory.get_renderer().implementation()
+
+deprecated(
+    'get_template',
+    '(pyramid.chameleon_zpt.get_template is deprecated '
+    'as of Pyramid 1.0; instead use '
+    'pyramid.renderers.get_renderer().implementation())')
 
 def render_template(path, **kw):
     """ Render a :term:`Chameleon` ZPT template using the template
@@ -95,6 +107,11 @@ def render_template(path, **kw):
     renderer = renderers.RendererHelper(name=path, package=package)
     return renderer.render(kw, None, request=request)
 
+deprecated(
+    'render_template',
+    '(pyramid.chameleon_zpt.render_template is deprecated as of Pyramid 1.0; '
+    'instead use pyramid.renderers.render)')
+
 def render_template_to_response(path, **kw):
     """ Render a :term:`Chameleon` ZPT template using the template
     implied by the ``path`` argument.  The ``path`` argument may be a
@@ -111,3 +128,8 @@ def render_template_to_response(path, **kw):
     request = kw.pop('request', None)
     renderer = renderers.RendererHelper(name=path, package=package)
     return renderer.render_to_response(kw, None, request=request)
+
+deprecated(
+    'render_template',
+    '(pyramid.chameleon_zpt.render_template_to_response is deprecated; as of '
+    'Pyramid 1.0, instead use pyramid.renderers.render_to_response)')
